syntax = "proto3";
option go_package = "./pb";

package protobuf;

service UserService {
    rpc CreateUser(CreateUserRequest) returns (User) {};
    rpc GetUsers(GetUsersRequest) returns (GetUsersResponse) {};
    rpc GetUserById(GetUserByIdRequest) returns (GetUserByIdResponse) {};
    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {};
}

message User {
    int32 id = 1;
    string username = 2;
    string name = 3;
    string bio = 4;
}

message CreateUserRequest {
    string username = 1;
    string name = 2;
    string bio = 3;
}

message GetUsersRequest {
    optional int32 offset = 1;
    optional int32 limit = 2;
}

message GetUsersResponse {
    repeated User data = 1;
}

message GetUserByIdRequest {
    int32 id = 1;
}

message GetUserByIdResponse {
    optional User data = 1;
}

message DeleteUserRequest {
    int32 id = 1;
}

message DeleteUserResponse {
    optional User user = 1;
}
